--- a/style.css
+++ b/style.css
@@ -1,178 +1,167 @@
 body {
-    background-color: #007bff;
     margin: 0;
-    background-image: url(img/фффффффффф.jpg);
-    background-repeat: no-repeat;
+    background-color: rgb(226, 236, 206);
 }
 
 * {
     box-sizing: border-box;
 }
 
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-nav a {
-    display: block;
-    text-decoration: none;
-    outline: none;
-    transition: .4s ease-in-out;
-}
-.topmenu {
-    text-align: center;
-    backface-visibility: hidden;
-    background: rgba(255, 255, 255, .8);
-}
-
-.topmenu > li {
-    display: inline-block;
-    position: relative;
-}
-
-.topmenu > li > a {
-    font-family: 'Exo 2', sans-serif;
-    height: 70px;
-    line-height: 70px;
-    padding: 0 30px;
-    font-weight: bold;
-    color: #003559;
-    text-transform: uppercase;
-}
-
-.down:after {
-    content: "\f107";
-    margin-left: 8px;
-    font-family: FontAwesome;
-}
-
-.topmenu li a:hover {
-    color: #E6855F;
-    cursor: pointer;
-}
-
-.submenu {
-    background: white;
-    border: 2px solid #003559;
-    position: absolute;
-    left: 0;
-    visibility: hidden;
-    opacity: 0;
-    z-index: 5;
-    width: 150px;
-    transform: perspective(600px) rotateX(-90deg);
-    transform-origin: 0% 0%;
-    transition: .6s ease-in-out;
-}
-
-.topmenu > li:hover .submenu {
-    visibility: visible;
-    opacity: 1;
-    transform: perspective(600px) rotateX(0deg);
-
-}
-
-.submenu li a {
-    color: #7f7f7f;
-    font-size: 13px;
-    line-height: 20px;
-    padding: 0 25px;
-    font-family: 'Kurale', serif;
-    border-bottom: solid slategrey !important;
-}
-
 .content {
     margin: 10px auto;
     width: 1000px;
+
+}
+
+.content-intro {
+    text-align: center;
+}
+
+.title-block-intro {
+    color: white;
+    letter-spacing: 4px;
+}
+
+.title-intro-text {
+    color: white;
 }
 
 .list {
     text-align: center;
     margin: 10px 0 10px 0;
     border-top: solid slategrey;
-    background: rgba(77, 75, 75,0.7);
+    background: rgba(77, 75, 75, 0.7);
     border-radius: 10px;
 }
 
 .customs-systems {
-    background-image: url(img/1.jpg);
+    background-image: url(img/фффффффффф.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
-    background-position: 0 91%;
+    background-position: 0 50%;
+    text-align: center;
+    padding: 50px;
+}
+
+.center-block {
     text-align: center;
 }
 
-.customs-systems a, h1, p, h3, li {
-    color: white;
-}
-
-.customs-text-img {
-    position: relative;
+.block {
+    display: inline-table;
     text-align: center;
-    display: table;
-    margin: 0px auto;
+    margin: 20px;
+    padding: 20px;
+    width: 200px;
+    height: 185px;
+    background: rgba(77, 75, 75, 0.7);
 }
 
-.complex-vd {
-    border-top: solid slategrey;
-    background: rgba(77, 75, 75,0.7);
+.block:hover {
+    cursor: pointer;
+    background: rgba(212, 129, 34, 1);
+}
+
+.block-text {
+    background-color: burlywood;
+    padding: 5px;
     border-radius: 10px;
-}
-
-.complex-vd h3 {
-    text-align: center;
 }
 
 .left-text {
     display: table-cell;
-    color: white;
 }
 
 .right-text {
     display: table-cell;
+
 }
 
-.right-text p {
-    width: 544px;
-}
-
-.make-request {
-    background:rgba(22, 51, 27, 0.9);
+.request {
     text-align: center;
-    padding: 10px 0 10px 0;
-    border-radius: 10px;
 }
 
-.qweasd {
-    position: relative;
-    overflow: hidden;
-    padding: 8px 26px;
-    font-size: 1em;
-    line-height: 2em;
-    border-radius: 5px;
-    letter-spacing: 1px;
-    display: inline-block;
-    margin-bottom: 0;
-    font-weight: normal;
-    text-align: center;
-    text-decoration: none;
-    vertical-align: middle;
+.fa-comments:hover {
+    color: dodgerblue;
     cursor: pointer;
-    background-image: none;
-    border: none;
-    white-space: nowrap;
-    -webkit-transition: all 0.16s ease;
-    -o-transition: all 0.16s ease;
-    -moz-transition: all 0.16s ease;
-    transition: all 0.16s ease;
+}
+
+.request-form {
+    display: none;
+    margin: 0 auto;
+    max-width: 95%;
+    box-sizing: border-box;
+    padding: 40px;
+    border-radius: 5px;
+    background: RGBA(255, 255, 255, 1);
+    -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, .45);
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, .45);
+}
+
+.textbox {
+    height: 50px;
+    width: 100%;
+    border-radius: 3px;
+    border: rgba(0, 0, 0, .3) 2px solid;
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    padding: 10px;
+    margin-bottom: 30px;
+}
+
+.message:focus,
+.textbox:focus {
+    outline: none;
+    border: rgba(24, 149, 215, 1) 2px solid;
+    color: rgba(24, 149, 215, 1);
+}
+
+.message {
+    background: rgba(255, 255, 255, 0.4);
+    width: 100%;
+    height: 120px;
+    border: rgba(0, 0, 0, .3) 2px solid;
+    box-sizing: border-box;
+    -moz-border-radius: 3px;
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    display: block;
+    padding: 10px;
+    margin-bottom: 30px;
+    overflow: hidden;
+}
+
+.button {
+    height: 50px;
+    width: 100%;
+    border-radius: 3px;
+    border: rgba(0, 0, 0, .3) 0px solid;
+    box-sizing: border-box;
+    padding: 10px;
+    background: #90c843;
+    color: #FFF;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16pt;
+    transition: background .4s;
+    cursor: pointer;
+}
+
+.button:hover {
+    background: #80b438;
 }
 
 .contact {
     text-align: center;
-    background:rgba(22, 51, 27, 0.9);
+    background: rgba(22, 51, 27, 0.9);
     border-radius: 10px;
+}
+
+.contact-text {
+    color: wheat;
 }
 
 .block-img {
