--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
     text-align: center;
 }
 
+.title-block {
+    /*margin: 0;*/
+}
+
 .title-block-intro {
     color: white;
     letter-spacing: 4px;
@@ -48,11 +52,10 @@ body {
 }
 
 .block {
-    display: inline-table;
-    text-align: center;
+    display: inline-grid;
     margin: 20px;
     padding: 20px;
-    width: 200px;
+    width: 282px;
     height: 185px;
     background: rgba(77, 75, 75, 0.7);
     border-radius: 5px;
